IE issue fixed for job alert form not showing the dropdown list

--- a/SitefinityWebApp/Mvc/Styles/rangeSlider.css
+++ b/SitefinityWebApp/Mvc/Styles/rangeSlider.css
@@ -244,9 +244,3 @@
   margin: 0;
   padding: 12px;
 }
-
-.visible-hidden{
-    visibility: hidden;
-    opacity: 0;
-    height: 1px;
-}
